Superdaze arranged okay, but fix spacing.

--- a/css/project.css
+++ b/css/project.css
@@ -196,5 +196,15 @@ body {
     }
 
 
+    .superdaze .features .scrollspy img {
+        width: 60%;
+        /* height: 100%; */
+    }
+    .superdaze .next-steps {
+        padding-bottom: 10em;
+    }
+    .superdaze .subheading-small {
+        padding-top: 3em;
+    }
 
 }
